--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 absl-py==2.3.1
+alabaster==1.0.0
 appnope==0.1.4
 asttokens==3.0.0
 astunparse==1.6.3
+babel==2.17.0
 beautifulsoup4==4.13.4
 certifi==2025.7.14
 charset-normalizer==3.4.2
@@ -10,6 +12,7 @@ contourpy==1.3.2
 cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
+docutils==0.21.2
 exceptiongroup==1.3.0
 executing==2.2.0
 filelock==3.18.0
@@ -21,9 +24,11 @@ google-pasta==0.2.0
 grpcio==1.73.1
 h5py==3.14.0
 idna==3.10
+imagesize==1.4.1
 ipykernel==6.29.5
 ipython==8.37.0
 jedi==0.19.2
+Jinja2==3.1.6
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 keras==3.10.0
@@ -60,13 +65,24 @@ pyzmq==27.0.0
 requests==2.32.4
 rich==14.0.0
 six==1.17.0
+snowballstemmer==3.0.1
 soupsieve==2.7
+Sphinx==8.1.3
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 stack-data==0.6.3
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==3.1.0
+tomli==2.2.1
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
