--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ alabaster==1.0.0
 appnope==0.1.4
 asttokens==3.0.0
 astunparse==1.6.3
+attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
+cattrs==25.1.1
 certifi==2025.7.14
 charset-normalizer==3.4.2
 comm==0.2.2
@@ -12,7 +14,9 @@ contourpy==1.3.2
 cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
+doc8==2.0.0
 docutils==0.21.2
+esbonio==0.16.5
 exceptiongroup==1.3.0
 executing==2.2.0
 filelock==3.18.0
@@ -34,6 +38,7 @@ jupyter_core==5.8.1
 keras==3.10.0
 kiwisolver==1.4.8
 libclang==18.1.1
+lsprotocol==2023.0.1
 Markdown==3.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -49,6 +54,7 @@ opt_einsum==3.4.0
 optree==0.16.0
 packaging==25.0
 parso==0.8.4
+pbr==6.1.1
 pexpect==4.9.0
 pillow==11.3.0
 platformdirs==4.3.8
@@ -57,12 +63,15 @@ protobuf==5.29.5
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pygls==1.3.1
 Pygments==2.19.2
 pyparsing==3.2.3
 PySocks==1.7.1
+pyspellchecker==0.8.3
 python-dateutil==2.9.0.post0
 pyzmq==27.0.0
 requests==2.32.4
+restructuredtext_lint==1.4.0
 rich==14.0.0
 six==1.17.0
 snowballstemmer==3.0.1
@@ -77,6 +86,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
 stack-data==0.6.3
+stevedore==5.4.1
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
